[package]
name = "kaste"
version = "0.1.0"
authors = ["kiobu <cdolson30@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2"
clap = "2.32"

[lib]
name = "spotifyqdbus"
path = "src/spotify/lib.rs"

[[bin]]
name = "kaste"
path = "src/main.rs"